fix drawer handle overlapping navigation (#134)

--- a/client/src/components/Public/Sidebar/Sidebar.scss
+++ b/client/src/components/Public/Sidebar/Sidebar.scss
@@ -15,8 +15,11 @@
   }
 }
 
-.drawer.drawer-left{
-    z-index: 1030;
+.drawer{
+  z-index: 900;
+}
+.drawer.drawer-left.drawer-open{
+  z-index: 1030;
 }
 .drawer-content {
   padding: 1rem 0.5rem;
